<resources>
    <string name="app_name">Geovallado-Búsqueda de Wifi</string>
    <string name="ScanList" />
    <string name="wait_geofence">Waiting geofence activation</string>
    <string name="start_scan">Scan Wifi started</string>
    <string name="stop_service">Parar servicio</string>
    <string name="exit_geofence">Salida geovallado</string>
    <string name="enter_geofence">Entrada geovallado</string>
    <string name="tm_image">TM image</string>


</resources>