<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- comment buttons -->

    <ImageView
        android:id="@+id/TMView"
        android:layout_width="360dp"
        android:layout_height="174dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tm_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tm" />

    <TextView
        android:id="@+id/scanReport"
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/ScanList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TMView" />

    <Button
        android:id="@+id/enterGeofence"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_geofence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanReport" />

    <Button
        android:id="@+id/exitGeofence"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/exit_geofence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterGeofence" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/stop_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitGeofence" />


</androidx.constraintlayout.widget.ConstraintLayout>